--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,4 @@
 name    = Dist-Zilla-Plugin-PodPurler
-version = 0.002
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
@@ -12,10 +11,4 @@ Moose::Autobox  = 0.08 ; flatten
 PPI             = 0    ; for detection of here-docs
 Pod::Eventual   = 0
 
-[@Filter]
-bundle = @Classic
-remove = PodVersion
-remove = BumpVersion
-
-[PodPurler]
-
+[@RJBS]
