Import of RJBS/Dist-Zilla-Plugin-PodPurler-0.092930_001 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-PodPurler
gitpan-cpan-version:      0.092930_001
gitpan-cpan-path:         RJBS/Dist-Zilla-Plugin-PodPurler-0.092930_001.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -10,5 +10,6 @@ Moose           = 0
 Moose::Autobox  = 0.08 ; flatten
 PPI             = 0    ; for detection of here-docs
 Pod::Eventual   = 0
+Pod::Elemental  = 0.092930
 
 [@RJBS]
