Import of RJBS/Dist-Zilla-Plugin-PodPurler-0.093020 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-PodPurler
gitpan-cpan-version:      0.093020
gitpan-cpan-path:         RJBS/Dist-Zilla-Plugin-PodPurler-0.093020.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -11,5 +11,10 @@ Moose::Autobox  = 0.08 ; flatten
 PPI             = 0    ; for detection of here-docs
 Pod::Eventual   = 0
 Pod::Elemental  = 0.092930
+Pod::Elemental::PerlMunger = 0 ; anything will do
 
-[@RJBS]
+[@Filter]
+bundle = @RJBS
+remove = PodWeaver
+
+[PodPurler]
