Import of RJBS/Dist-Zilla-Plugin-PodPurler-0.093401 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-PodPurler
gitpan-cpan-version:      0.093401
gitpan-cpan-path:         RJBS/Dist-Zilla-Plugin-PodPurler-0.093401.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -3,18 +3,4 @@ author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
-[Prereq]
-Dist::Zilla     = 0 ; minimum unknown
-List::MoreUtils = 0
-Moose           = 0
-Moose::Autobox  = 0.08 ; flatten
-PPI             = 0    ; for detection of here-docs
-Pod::Eventual   = 0
-Pod::Elemental  = 0.092930
-Pod::Elemental::PerlMunger = 0 ; anything will do
-
-[@Filter]
-bundle = @RJBS
-remove = PodWeaver
-
-[PodPurler]
+[@RJBS]
